<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order Id : "
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Billing Address Start -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/billingAddress"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/billingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Charli"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/billingAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="Room no 1101 near Railway station Ambad"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/country" />

        <EditText
            android:id="@+id/billingCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="India"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/state" />

        <EditText
            android:id="@+id/billingState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="MH"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/city" />

        <EditText
            android:id="@+id/billingCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Indore"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/zip" />

        <EditText
            android:id="@+id/billingZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="425001"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/tel" />

        <EditText
            android:id="@+id/billingTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="9595226054"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/billingEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="pratik.pai@avenues.info"
            />

        <!-- Billing Address End -->

        <!-- Delivery Address Start -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/deliveryAddress"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/deliveryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Chaplin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/deliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="room no.701 near bus stand"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/country" />

        <EditText
            android:id="@+id/deliveryCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="India"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/state" />

        <EditText
            android:id="@+id/deliveryState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Andhra"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/city" />

        <EditText
            android:id="@+id/deliveryCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Hyderabad"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/zip" />

        <EditText
            android:id="@+id/deliveryZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="425001"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/tel" />

        <EditText
            android:id="@+id/deliveryTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="9595226054"
            />

        <!-- Delivery Address End -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/redirect_url" />

        <EditText
            android:id="@+id/redirectUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="http://122.182.6.216/merchant/ccavResponseHandler.jsp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/cancel_url" />

        <EditText
            android:id="@+id/cancelUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="http://122.182.6.216/merchant/ccavResponseHandler.jsp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/rsa_url" />

        <EditText
            android:id="@+id/rsaUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="http://122.182.6.216/merchant/GetRSA.jsp" />

        <LinearLayout
            android:id="@+id/linDataCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/payOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/pay_opt" />

            <Spinner
                android:id="@+id/payopt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:prompt="@string/pay_opt" />

            <TextView
                android:id="@+id/cardtypetv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/card_type" />

            <Spinner
                android:id="@+id/cardtype"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:prompt="@string/card_type" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emiOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/emi_banks" />

            <Spinner
                android:id="@+id/emiBanks"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:prompt="@string/emi_banks" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/emi_card_name" />

            <Spinner
                android:id="@+id/emiCardName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:prompt="@string/emi_card_name" />

            <LinearLayout
                android:id="@+id/emiDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:visibility="gone" >

            <!-- Card Details Start -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/card_details"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/card_number" />

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="4111111111111111" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/card_cvv" />

            <EditText
                android:id="@+id/cardCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|textPassword"
                android:text="328" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/expiry_month" />

            <EditText
                android:id="@+id/expiryMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="07" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/expiry_year" />

            <EditText
                android:id="@+id/expiryYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="2027" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/issuing_bank" />

            <EditText
                android:id="@+id/issuingBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="State Bank of India" />

            <!-- Card Details End -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vCardCVVCont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:visibility="gone" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/card_cvv" />

            <EditText
                android:id="@+id/vCardCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|textPassword"
                android:text="" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/saveCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Card"
            android:visibility="gone" />

        <Button
            android:id="@+id/paybutton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:onClick="onClick"
            android:text="@string/pay_button" />
    </LinearLayout>
</ScrollView>